--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^16.4.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -51,7 +52,9 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "jest": {
     "collectCoverageFrom": [
